--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,43 +17,32 @@ jobs:
         with:
           node-version: '20'
 
-      - name: 3. Dynamic Path Discovery & Patch Sync
-        # هذا الجزء ينهي مشكلة تكرار المسارات ويهيئ التصحيحات
-        run: |
-          REAL_PATH=$(find . -name "package.json" -not -path "*/node_modules/*" | head -n 1 | xargs dirname)
-          echo "PROJECT_ROOT=$REAL_PATH" >> $GITHUB_ENV
-          echo "✅ Detected Project Root at: $REAL_PATH"
-          
-          # مزامنة مجلد patches من الجذر إلى جانب package.json
-          mkdir -p "$REAL_PATH/patches"
-          if [ -d "patches" ]; then
-            cp -r patches/* "$REAL_PATH/patches/"
-          fi
-
-      - name: 4. Setup EAS CLI
+      - name: 3. Setup EAS CLI
         uses: expo/expo-github-action@v8
         with:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: 5. Installation & Emergency Clean
-        working-directory: ${{ env.PROJECT_ROOT }}
+      - name: 4. Installation & Patching
+        # التوجه مباشرة لمجلد mobile بناءً على الصورة
+        working-directory: oasis-server/mobile
         run: |
-          echo "Current Path: $(pwd)"
-          # تنظيف شامل لمنع أخطاء الذاكرة السابقة
+          # تنظيف الكاش لمنع أخطاء الذاكرة (Buffer) الظاهرة في السجلات
           npm cache clean --force
           rm -rf node_modules package-lock.json
           
-          # تثبيت الحزم (تفعيل حل Emergent التلقائي)
+          # تثبيت الحزم (سيقوم patch-package بتطبيق ملف التصحيح آلياً)
           npm install --legacy-peer-deps --force
           
-          # استخدام 'sed' بدلاً من سكريبت Node لتجنب أخطاء Buffer وحذف typeof نهائياً
-          echo "Running emergency cleaning..."
+          # مشرط الطوارئ (sed): حذف typeof يدوياً وبسرعة البرق لضمان نظافة الكود تماماً
+          echo "Applying emergency cleaning for @zegocloud..."
           find node_modules/@zegocloud -name "*.js" -type f -exec sed -i "s/import { typeof } from 'react-native';/import { } from 'react-native';/g" {} +
 
-      - name: 6. Launch EAS Cloud Build
-        working-directory: ${{ env.PROJECT_ROOT }}
+      - name: 5. Launch EAS Cloud Build
+        working-directory: oasis-server/mobile
         run: |
-          # فحص أخير للتأكد من اختفاء كلمة typeof
-          grep -r "typeof " node_modules/@zegocloud || echo "✅ Success: Code is clean!"
+          # فحص أمان أخير للتأكد من اختفاء كلمة typeof المسببة للخطأ
+          grep -r "typeof " node_modules/@zegocloud || echo "✅ Success: Code is Clean!"
+          
+          # إطلاق البناء السحابي النهائي
           eas build --platform android --profile preview --non-interactive --no-wait --clear-cache
