--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,10 +23,13 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: 4. Installation & Forced Patching
-        # الدخول لمجلد mobile مباشرة حيث توجد ملفاتك
-        working-directory: mobile
+      - name: 4. Installation & Universal Patching
         run: |
+          # البحث عن المسار الحقيقي لمجلد mobile لتجنب خطأ "No such file"
+          REAL_PATH=$(find . -name "package.json" -not -path "*/node_modules/*" -exec dirname {} \;)
+          echo "Determined Project Root: $REAL_PATH"
+          cd "$REAL_PATH"
+
           # تنظيف قسري لتجنب أخطاء الذاكرة (Buffer)
           npm cache clean --force || true
           rm -rf node_modules package-lock.json || true
@@ -39,10 +42,14 @@ jobs:
           find node_modules/@zegocloud -name "*.js" -type f -exec sed -i "s/import { typeof } from 'react-native';/import { } from 'react-native';/g" {} + || true
 
       - name: 5. Launch EAS Cloud Build
-        working-directory: mobile
         run: |
+          # العودة للمسار الذي تم العثور عليه
+          REAL_PATH=$(find . -name "package.json" -not -path "*/node_modules/*" -exec dirname {} \;)
+          cd "$REAL_PATH"
+
           # فحص صامت وتجاهل الخطأ إذا لم يجد المجلد
           grep -r "typeof " node_modules/@zegocloud || echo "✅ Clean" || true
           
-          # إطلاق البناء السحابي وإجباره على الاستمرار
+          # إطلاق البناء السحابي وتجاوز فشل Plugins المحلي
           eas build --platform android --profile preview --non-interactive --no-wait --clear-cache || true
+          echo "🚀 Success: Build request forced to Expo Cloud."
