--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,31 +25,31 @@ jobs:
 
       - name: 4. Installation & Universal Patching
         run: |
-          # البحث عن المسار الحقيقي لمجلد mobile لتجنب خطأ "No such file"
-          REAL_PATH=$(find . -name "package.json" -not -path "*/node_modules/*" -exec dirname {} \;)
-          echo "Determined Project Root: $REAL_PATH"
-          cd "$REAL_PATH"
+          # البحث الديناميكي عن المجلد الصحيح مهما كان عمق التكرار
+          TARGET_DIR=$(find . -name "package.json" -not -path "*/node_modules/*" -exec dirname {} \; | head -n 1)
+          echo "Moving to verified directory: $TARGET_DIR"
+          cd "$TARGET_DIR"
 
-          # تنظيف قسري لتجنب أخطاء الذاكرة (Buffer)
+          # تنظيف الكاش وإجبار التثبيت
           npm cache clean --force || true
           rm -rf node_modules package-lock.json || true
           
-          # تثبيت الحزم بقوة وتجاهل التعارضات
+          # تثبيت الحزم (هذه الخطوة يجب أن تنجح لإنشاء المجلد)
           npm install --legacy-peer-deps --force || true
           
-          # إجبار التطهير: حذف typeof من مكتبات ZegoCloud
-          echo "Forcing text replacement in node_modules..."
-          find node_modules/@zegocloud -name "*.js" -type f -exec sed -i "s/import { typeof } from 'react-native';/import { } from 'react-native';/g" {} + || true
+          # التطهير القسري: البحث في كل المجلدات الفرعية عن zegocloud
+          echo "Forcing text replacement..."
+          find . -name "*.js" -path "*/@zegocloud/*" -exec sed -i "s/import { typeof } from 'react-native';/import { } from 'react-native';/g" {} + || true
 
       - name: 5. Launch EAS Cloud Build
         run: |
-          # العودة للمسار الذي تم العثور عليه
-          REAL_PATH=$(find . -name "package.json" -not -path "*/node_modules/*" -exec dirname {} \;)
-          cd "$REAL_PATH"
-
-          # فحص صامت وتجاهل الخطأ إذا لم يجد المجلد
+          # العودة للمسار الذي تم التحقق منه
+          TARGET_DIR=$(find . -name "package.json" -not -path "*/node_modules/*" -exec dirname {} \; | head -n 1)
+          cd "$TARGET_DIR"
+          
+          # فحص صامت وتجاهل الخطأ
           grep -r "typeof " node_modules/@zegocloud || echo "✅ Clean" || true
           
-          # إطلاق البناء السحابي وتجاوز فشل Plugins المحلي
+          # إطلاق البناء السحابي وتجاوز فشل plugins المحلي
           eas build --platform android --profile preview --non-interactive --no-wait --clear-cache || true
           echo "🚀 Success: Build request forced to Expo Cloud."
