--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,7 +7,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package --patch-dir patches"
   },
   "dependencies": {
     "expo": "~50.0.0",
@@ -30,13 +30,11 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "react-native-get-random-values": "~1.10.0",
     "expo-notifications": "~0.27.6",
-    "expo-permissions": "~14.4.0",
     "react-native-crypto-js": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "patch-package": "^8.0.0",
-    "postinstall-postinstall": "^2.1.0"
+    "patch-package": "^8.0.0"
   },
   "private": true
 }
