--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,55 +1,1 @@
-Name: Oasis_Final_Cloud_Build
-
-on:
-  push:
-    branches: [main]
-  workflow_dispatch:
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: 1. Checkout Code
-        uses: actions/checkout@v4
-
-      - name: 2. Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: 3. Setup EAS CLI
-        uses: expo/expo-github-action@v8
-        with:
-          eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
-
-      - name: 4. Universal Hunt & Forced Patching
-        run: |
-          # العثور على المسار الصحيح لتجنب خطأ No such file or directory
-          TARGET_DIR=$(find . -name "package.json" -not -path "*/node_modules/*" -exec dirname {} \; | head -n 1)
-          echo "Moving to verified directory: $TARGET_DIR"
-          cd "$TARGET_DIR"
-
-          # تنظيف قسري لتجنب أخطاء الذاكرة Buffer
-          npm cache clean --force || true
-          rm -rf node_modules package-lock.json || true
-          
-          # تثبيت الحزم لإعادة إنشاء المجلدات المفقودة
-          npm install --legacy-peer-deps --force || true
-          
-          # التطهير القسري باستخدام sed (أخف على الذاكرة)
-          echo "Forcing text replacement..."
-          find . -name "*.js" -path "*/@zegocloud/*" -exec sed -i "s/import { typeof } from 'react-native';/import { } from 'react-native';/g" {} + || true
-
-      - name: 5. Absolute Force Launch EAS Build
-        run: |
-          # التأكد من العمل داخل مجلد المشروع المكتشف
-          TARGET_DIR=$(find . -name "package.json" -not -path "*/node_modules/*" -exec dirname {} \; | head -n 1)
-          cd "$TARGET_DIR"
-          
-          # فحص صامت وتجاهل الأخطاء لضمان الاستمرار
-          grep -r "typeof " node_modules/@zegocloud || echo "✅ Clean" || true
-          
-          # إجبار إرسال الطلب لسحابة Expo وتجاوز فشل plugins المحلي
-          eas build --platform android --profile preview --non-interactive --no-wait --clear-cache || true
-          echo "🚀 Success: Build request forced to Expo Cloud."
+npm install && npx patch-package --patch-dir patches && npx eas-cli build -p android --profile preview
