--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,1 +1,34 @@
-npm install && npx patch-package --patch-dir patches && npx eas-cli build -p android --profile preview
+name: Oasis Auto Build APK
+on:
+  push:
+    branches:
+      - main  # سيتم البناء تلقائياً عند رفع أي ملف لهذا الفرع
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🏗 Checkout repository
+        uses: actions/checkout@v4
+
+      - name: 🏗 Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: 🏗 Setup EAS
+        uses: expo/expo-github-action@v8
+        with:
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }} # يجب إضافة هذا المفتاح في إعدادات مستودعك
+
+      - name: 📦 Install dependencies
+        run: |
+          cd mobile
+          npm install
+          npx patch-package --patch-dir patches
+
+      - name: 🚀 Build APK
+        run: |
+          cd mobile
+          npx eas-cli build -p android --profile preview --non-interactive
